cabal-version:      3.0
name:               ghc-repl
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Aleksandr Makarov
maintainer:         next.meaning@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  GhcRepl

    -- Modules included in this library but not exported.
    -- other-modules:

    default-extensions: OverloadedStrings
                      , NumericUnderscores
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , hie-bios
                    , hint
    hs-source-dirs:   src
    default-language: Haskell2010

executable ghc-repl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        ghc-repl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ghc-repl-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          GhcReplTest.hs
    build-depends:    base ^>=4.14.3.0
